--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,90 @@
-altair==5.1.2
+altair==5.4.1
+altgraph==0.17.4
 annotated-types==0.7.0
-anyio==4.6.2.post1
-attrs==23.1.0
-blinker==1.6.3
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
+anyio==4.4.0
+attrs==24.2.0
+av==12.3.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.0
+charset-normalizer==3.3.2
 click==8.1.7
+coloredlogs==15.0.1
+ctranslate2==4.3.1
 distro==1.9.0
 exceptiongroup==1.2.2
-gitdb==4.0.10
-GitPython==3.1.37
+faster-whisper==1.0.3
+filelock==3.15.4
+flatbuffers==24.3.25
+fsspec==2024.9.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==2.19.2
+google-auth==2.34.0
+googleapis-common-protos==1.65.0
+grpcio==1.66.1
+grpcio-status==1.66.1
 h11==0.14.0
-httpcore==1.0.6
+httpcore==1.0.5
 httpx==0.27.2
-idna==3.4
-Jinja2==3.1.2
-jiter==0.6.1
-joblib==1.4.2
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
+huggingface-hub==0.24.6
+humanfriendly==10.0
+idna==3.8
+Jinja2==3.1.4
+jiter==0.5.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+macholib==1.16.3
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+MarkupSafe==2.1.5
 mdurl==0.1.2
-numpy
-openai==1.52.0
-packaging==23.2
+modulegraph==0.19.6
+mpmath==1.3.0
+narwhals==1.10.0
+networkx==3.3
+numpy==2.1.1
+onnxruntime==1.19.2
+openai==1.43.0
+packaging==24.1
 pandas==2.2.3
-Pillow==10.0.1
-protobuf==4.24.4
-pyarrow==13.0.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydeck==0.8.0
-Pygments==2.16.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-referencing==0.30.2
-requests==2.31.0
-rich==13.6.0
-rpds-py==0.10.6
-scikit-learn==1.5.2
-scipy
+pillow==10.4.0
+proto-plus==1.24.0
+protobuf==5.28.0
+py2app==0.28.8
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pyttsx3==2.91
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.3
+rpds-py==0.20.0
+rsa==4.9
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+SpeechRecognition==3.10.4
 streamlit==1.39.0
-tenacity==8.2.3
-threadpoolctl==3.5.0
+sympy==1.13.2
+tenacity==9.0.0
+tokenizers==0.20.0
 toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
+torch==2.4.1
+torchaudio==2.4.1
+tornado==6.4.1
 tqdm==4.66.5
 typing_extensions==4.12.2
-tzdata==2023.3
-urllib3==2.0.6
-watchdog==3.0.0
-xgboost==2.1.1
+tzdata==2024.2
+urllib3==2.2.2
