--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ humanfriendly==10.0
 idna==3.8
 Jinja2==3.1.4
 jiter==0.5.0
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 macholib==1.16.3
@@ -55,6 +56,7 @@ py2app==0.28.8
 pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -71,6 +73,8 @@ requests==2.32.3
 rich==13.9.3
 rpds-py==0.20.0
 rsa==4.9
+scikit-learn==1.5.2
+scipy==1.14.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
@@ -78,6 +82,7 @@ SpeechRecognition==3.10.4
 streamlit==1.39.0
 sympy==1.13.2
 tenacity==9.0.0
+threadpoolctl==3.5.0
 tokenizers==0.20.0
 toml==0.10.2
 torch==2.4.1
@@ -87,3 +92,4 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.2
+xgboost==2.1.2
