--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,8 @@
     { "src": "/(.*)", "dest": "main.py" }
   ],
   "functions": {
-    "excludeFiles": "**/*.pkl"
+    "main.py": {
+      "excludeFiles": "**/*.pkl"
+    }
   }
 }
