--- a/requirements.txt
+++ b/requirements.txt
@@ -109,7 +109,7 @@ sniffio==1.3.1
 soupsieve==2.6
 SpeechRecognition==3.10.4
 stack-data==0.6.3
-streamlit==1.39.0
+streamlit>=1.25.0
 sympy==1.13.2
 tenacity==9.0.0
 threadpoolctl==3.5.0
